// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Route Link disabled matches snapshot (Link) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 svg {
  margin-right: var(--spacing-1x);
}

.c0.iconOnly svg {
  margin: 0;
}

.c0.external {
  color: #7fbfd2;
}

.c0.external:focus {
  outline: none;
}

.c0.external:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c0.external:visited {
  color: #094c6c;
}

.c0.external:visited svg {
  color: #094c6c;
}

.c0.navigation {
  color: #9ca7b4;
}

.c0.navigation:focus {
  outline: none;
}

.c0.navigation:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

<a
  aria-disabled="true"
  className="c0 navigation"
  disabled={true}
>
  Navigation Link
</a>
`;

exports[`Route Link disabled matches snapshot (NavLink) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 svg {
  margin-right: var(--spacing-1x);
}

.c0.iconOnly svg {
  margin: 0;
}

.c0.external {
  color: #7fbfd2;
}

.c0.external:focus {
  outline: none;
}

.c0.external:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c0.external:visited {
  color: #094c6c;
}

.c0.external:visited svg {
  color: #094c6c;
}

.c0.navigation {
  color: #9ca7b4;
}

.c0.navigation:focus {
  outline: none;
}

.c0.navigation:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

<a
  aria-disabled="true"
  className="c0 navigation"
  disabled={true}
>
  Navigation Link
</a>
`;

exports[`Route Link matches snapshot (Link) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 svg {
  margin-right: var(--spacing-1x);
}

.c0.iconOnly svg {
  margin: 0;
}

.c0.external {
  color: #0080a5;
}

.c0.external:focus {
  outline: none;
}

.c0.external:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c0.external:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0.external:visited {
  color: #094c6c;
}

.c0.external:visited svg {
  color: #094c6c;
}

.c0.navigation {
  color: #57666e;
}

.c0.navigation:focus {
  outline: none;
}

.c0.navigation:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c0.navigation:hover {
  color: #000;
}

.c0.navigation.active {
  color: #0080a5;
}

<a
  className="c0 navigation"
  href="/test"
  onClick={[Function]}
>
  Navigation Link
</a>
`;

exports[`Route Link matches snapshot (NavLink) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 svg {
  margin-right: var(--spacing-1x);
}

.c0.iconOnly svg {
  margin: 0;
}

.c0.external {
  color: #0080a5;
}

.c0.external:focus {
  outline: none;
}

.c0.external:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c0.external:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0.external:visited {
  color: #094c6c;
}

.c0.external:visited svg {
  color: #094c6c;
}

.c0.navigation {
  color: #57666e;
}

.c0.navigation:focus {
  outline: none;
}

.c0.navigation:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c0.navigation:hover {
  color: #000;
}

.c0.navigation.active {
  color: #0080a5;
}

<a
  aria-current={null}
  className="c0 navigation"
  href="/test"
  onClick={[Function]}
>
  Navigation Link
</a>
`;

exports[`Route Link only icon matches snapshot (Link) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 svg {
  margin-right: var(--spacing-1x);
}

.c0.iconOnly svg {
  margin: 0;
}

.c0.external {
  color: #0080a5;
}

.c0.external:focus {
  outline: none;
}

.c0.external:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c0.external:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0.external:visited {
  color: #094c6c;
}

.c0.external:visited svg {
  color: #094c6c;
}

.c0.navigation {
  color: #57666e;
}

.c0.navigation:focus {
  outline: none;
}

.c0.navigation:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c0.navigation:hover {
  color: #000;
}

.c0.navigation.active {
  color: #0080a5;
}

<a
  className="c0 navigation iconOnly"
  href="/test"
  onClick={[Function]}
>
  <svg
    color="currentColor"
    focusable={false}
    height="16"
    width="16"
  />
</a>
`;

exports[`Route Link only icon matches snapshot (NavLink) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 svg {
  margin-right: var(--spacing-1x);
}

.c0.iconOnly svg {
  margin: 0;
}

.c0.external {
  color: #0080a5;
}

.c0.external:focus {
  outline: none;
}

.c0.external:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c0.external:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0.external:visited {
  color: #094c6c;
}

.c0.external:visited svg {
  color: #094c6c;
}

.c0.navigation {
  color: #57666e;
}

.c0.navigation:focus {
  outline: none;
}

.c0.navigation:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c0.navigation:hover {
  color: #000;
}

.c0.navigation.active {
  color: #0080a5;
}

<a
  aria-current={null}
  className="c0 navigation iconOnly"
  href="/test"
  onClick={[Function]}
>
  <svg
    color="currentColor"
    focusable={false}
    height="16"
    width="16"
  />
</a>
`;

exports[`Route Link with icon matches snapshot (Link) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 svg {
  margin-right: var(--spacing-1x);
}

.c0.iconOnly svg {
  margin: 0;
}

.c0.external {
  color: #0080a5;
}

.c0.external:focus {
  outline: none;
}

.c0.external:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c0.external:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0.external:visited {
  color: #094c6c;
}

.c0.external:visited svg {
  color: #094c6c;
}

.c0.navigation {
  color: #57666e;
}

.c0.navigation:focus {
  outline: none;
}

.c0.navigation:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c0.navigation:hover {
  color: #000;
}

.c0.navigation.active {
  color: #0080a5;
}

<a
  className="c0 navigation"
  href="/test"
  onClick={[Function]}
>
  <svg
    color="currentColor"
    focusable={false}
    height="16"
    width="16"
  />
  Navigation Link
</a>
`;

exports[`Route Link with icon matches snapshot (NavLink) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 svg {
  margin-right: var(--spacing-1x);
}

.c0.iconOnly svg {
  margin: 0;
}

.c0.external {
  color: #0080a5;
}

.c0.external:focus {
  outline: none;
}

.c0.external:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c0.external:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0.external:visited {
  color: #094c6c;
}

.c0.external:visited svg {
  color: #094c6c;
}

.c0.navigation {
  color: #57666e;
}

.c0.navigation:focus {
  outline: none;
}

.c0.navigation:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c0.navigation:hover {
  color: #000;
}

.c0.navigation.active {
  color: #0080a5;
}

<a
  aria-current={null}
  className="c0 navigation"
  href="/test"
  onClick={[Function]}
>
  <svg
    color="currentColor"
    focusable={false}
    height="16"
    width="16"
  />
  Navigation Link
</a>
`;
